@@ -1,0 +1,1 @@
+static const char version[] = "$VER: Installer 43.3 (29.03.2002)\n";
